--- a/src/MEGASync/gui/Resources_light.qrc
+++ b/src/MEGASync/gui/Resources_light.qrc
@@ -165,5 +165,6 @@
         <file alias="database.svg">images/themed/light/database.svg</file>
         <file alias="sync-01.svg">images/themed/light/sync-01.svg</file>
         <file alias="monitor.svg">images/themed/light/monitor.svg</file>
+        <file alias="alert-circle-support-warning.svg">images/themed/light/alert-circle-support-warning.svg</file>
     </qresource>
 </RCC>
