--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueFilePath.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueFilePath.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>339</width>
-    <height>283</height>
+    <height>347</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -73,12 +73,6 @@ QPushButton
     border: none;
 }
 
-#lines, #moveLines, #movePathProblemLines
-{
-   min-width: 24px;
-   max-width: 24px;
-}
-
 #moveLabel
 {
     font-family: Lato;
@@ -106,75 +100,6 @@ QPushButton
    <property name="verticalSpacing">
     <number>0</number>
    </property>
-   <item row="0" column="0">
-    <spacer name="indent">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeType">
-      <enum>QSizePolicy::Fixed</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="1" alignment="Qt::AlignTop">
-    <widget class="QLabel" name="LocalOrRemoteIcon">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>24</width>
-       <height>24</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>24</width>
-       <height>24</height>
-      </size>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="2" alignment="Qt::AlignLeft|Qt::AlignTop">
-    <widget class="QLabel" name="LocalOrRemoteText">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>24</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>24</height>
-      </size>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="type" stdset="0">
-      <string notr="true">secondary</string>
-     </property>
-     <property name="dimension" stdset="0">
-      <string notr="true">small</string>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="1" colspan="2" alignment="Qt::AlignTop">
     <widget class="QWidget" name="file" native="true">
      <property name="sizePolicy">
@@ -183,7 +108,7 @@ QPushButton
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3">
+     <layout class="QGridLayout" name="gridLayout_3" rowstretch="0,0" columnstretch="0,0">
       <property name="leftMargin">
        <number>0</number>
       </property>
@@ -196,10 +121,7 @@ QPushButton
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <property name="horizontalSpacing">
-       <number>0</number>
-      </property>
-      <property name="verticalSpacing">
+      <property name="spacing">
        <number>4</number>
       </property>
       <item row="0" column="1">
@@ -379,7 +301,7 @@ QPushButton
                <string/>
               </property>
               <property name="icon">
-               <iconset>
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/StalledIssues/alert_circle_small_default.png</normaloff>:/images/StalledIssues/alert_circle_small_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -418,8 +340,8 @@ QPushButton
             <string/>
            </property>
            <property name="icon">
-            <iconset>
-             <normaloff>:/images/help_ico.png</normaloff>:/images/help_ico.png</iconset>
+            <iconset resource="../../../gui/Resources_common.qrc">
+             <normaloff>:/help-circle</normaloff>:/help-circle</iconset>
            </property>
            <property name="iconSize">
             <size>
@@ -445,8 +367,8 @@ QPushButton
         </layout>
        </widget>
       </item>
-      <item row="0" column="0" rowspan="2">
-       <widget class="QWidget" name="linesContainer" native="true">
+      <item row="0" column="0">
+       <widget class="QWidget" name="filePathArrowContainer" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
           <horstretch>0</horstretch>
@@ -455,13 +377,13 @@ QPushButton
         </property>
         <property name="minimumSize">
          <size>
-          <width>26</width>
+          <width>16</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>26</width>
+          <width>16</width>
           <height>16777215</height>
          </size>
         </property>
@@ -476,13 +398,13 @@ QPushButton
           <number>0</number>
          </property>
          <property name="rightMargin">
-          <number>2</number>
+          <number>0</number>
          </property>
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item alignment="Qt::AlignLeft">
-          <widget class="QLabel" name="lines">
+         <item alignment="Qt::AlignRight">
+          <widget class="QLabel" name="pathArrow">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -491,14 +413,75 @@ QPushButton
            </property>
            <property name="minimumSize">
             <size>
-             <width>24</width>
-             <height>0</height>
+             <width>16</width>
+             <height>16</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>24</width>
-             <height>16777215</height>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QWidget" name="pathProblemArrowContainer" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>16</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_9">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item alignment="Qt::AlignRight">
+          <widget class="QLabel" name="problemArrow">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
             </size>
            </property>
           </widget>
@@ -522,7 +505,7 @@ QPushButton
        <number>0</number>
       </property>
       <property name="topMargin">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
@@ -531,7 +514,7 @@ QPushButton
        <number>0</number>
       </property>
       <property name="spacing">
-       <number>0</number>
+       <number>4</number>
       </property>
       <item row="0" column="1">
        <widget class="QWidget" name="moveHeader" native="true">
@@ -543,13 +526,13 @@ QPushButton
           <number>0</number>
          </property>
          <property name="topMargin">
-          <number>0</number>
+          <number>4</number>
          </property>
          <property name="rightMargin">
           <number>0</number>
          </property>
          <property name="bottomMargin">
-          <number>0</number>
+          <number>4</number>
          </property>
          <item>
           <widget class="QLabel" name="moveLines">
@@ -561,14 +544,14 @@ QPushButton
            </property>
            <property name="minimumSize">
             <size>
-             <width>24</width>
-             <height>24</height>
+             <width>16</width>
+             <height>16</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>24</width>
-             <height>24</height>
+             <width>16</width>
+             <height>16</height>
             </size>
            </property>
           </widget>
@@ -765,7 +748,7 @@ QPushButton
                <string/>
               </property>
               <property name="icon">
-               <iconset>
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/StalledIssues/alert_circle_small_default.png</normaloff>:/images/StalledIssues/alert_circle_small_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -802,17 +785,17 @@ QPushButton
         </layout>
        </widget>
       </item>
-      <item row="1" column="0" rowspan="3">
-       <widget class="QWidget" name="movePathProblemLinesContainer" native="true">
+      <item row="1" column="0">
+       <widget class="QWidget" name="moveFilePathArrowContainer" native="true">
         <property name="minimumSize">
          <size>
-          <width>26</width>
+          <width>16</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>26</width>
+          <width>16</width>
           <height>16777215</height>
          </size>
         </property>
@@ -821,7 +804,7 @@ QPushButton
           <number>0</number>
          </property>
          <property name="leftMargin">
-          <number>2</number>
+          <number>0</number>
          </property>
          <property name="topMargin">
           <number>0</number>
@@ -833,7 +816,7 @@ QPushButton
           <number>0</number>
          </property>
          <item alignment="Qt::AlignRight">
-          <widget class="QLabel" name="movePathProblemLines">
+          <widget class="QLabel" name="movePathArrow">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -842,18 +825,70 @@ QPushButton
            </property>
            <property name="minimumSize">
             <size>
-             <width>24</width>
-             <height>0</height>
+             <width>16</width>
+             <height>16</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>24</width>
-             <height>16777215</height>
+             <width>16</width>
+             <height>16</height>
             </size>
            </property>
-           <property name="text">
-            <string/>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QWidget" name="movePathProblemArrowContainer" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>16</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item alignment="Qt::AlignRight">
+          <widget class="QLabel" name="movePathProblemArrow">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -861,6 +896,75 @@ QPushButton
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item row="0" column="1" alignment="Qt::AlignVCenter">
+    <widget class="QLabel" name="LocalOrRemoteIcon">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>16</width>
+       <height>16</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16</width>
+       <height>16</height>
+      </size>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <spacer name="indent">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Fixed</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="2" alignment="Qt::AlignLeft|Qt::AlignVCenter">
+    <widget class="QLabel" name="LocalOrRemoteText">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>24</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>24</height>
+      </size>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="type" stdset="0">
+      <string notr="true">secondary</string>
+     </property>
+     <property name="dimension" stdset="0">
+      <string notr="true">small</string>
+     </property>
     </widget>
    </item>
   </layout>
@@ -872,6 +976,8 @@ QPushButton
    <header>WordWrapLabel.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../../gui/Resources_common.qrc"/>
+ </resources>
  <connections/>
 </ui>
